syntax = "proto2";

import "pyatv/protocols/mrp/protobuf/ProtocolMessage.proto";
import "pyatv/protocols/mrp/protobuf/ContentItem.proto";
import "pyatv/protocols/mrp/protobuf/PlayerPath.proto";

extend ProtocolMessage {
  optional UpdateContentItemMessage updateContentItemMessage = 60;
}

message UpdateContentItemMessage {
  repeated ContentItem contentItems = 1;
  optional PlayerPath playerPath = 2;
}
